@@ -727,9 +727,10 @@ Other memory:
 0.3.3 2007-xx-xx Gregory Nutt <spudmonkey@racsa.co.cr>
 
 	* Removed unused uIP files
-	* sched/, mm/, net/ subystem debug can not be selectively enabled/disabled
+	* sched/, mm/, and net/ subystem debug can not be selectively enabled/disabled
 	* Correct socket close logic -- needs to disconnect TCP socket on close
 	* uIP webserver now seems to be fully functional
+	* fs/ and lib/ subystem debug can not be selectively enabled/disabled
 </pre></ul>
 
 <table width ="100%">
