@@ -1197,16 +1197,22 @@ The system can be re-made subsequently by just typing <code>make</code>.
     <code>CONFIG_DEBUG</code>: enables built-in debug options
   </li>
   <li>
+    <code>CONFIG_DEBUG_VERBOSE</code>: enables verbose debug output
+  </li>
+  <li>
     <code>CONFIG_DEBUG_SCHED</code>: enable OS debug output (disabled by default)
   </li>
   <li>
     <code>CONFIG_DEBUG_MM</code>: enable memory management debug output (disabld by default)
   </li>
   <li>
-    <code>CONFIG_DEBUG_NET</code>: enable networkd debug output (disabled by default)
+    <code>CONFIG_DEBUG_NET</code>: enable network debug output (disabled by default)
   </li>
   <li>
-    <code>CONFIG_DEBUG_VERBOSE</code>: enables verbose debug output
+    <code>CONFIG_DEBUG_FS</code>: enable filesystem debug output (disabled by default)
+  </li>
+  <li>
+    <code>CONFIG_DEBUG_LIB</code>: enable C library debug output (disabled by default)
   </li>
   <li>
     <code>CONFIG_HAVE_LOWPUTC</code>: architecture supports low-level, boot
